--- a/templates/MerchantManagement/MerchantList.html
+++ b/templates/MerchantManagement/MerchantList.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     {% for m in Merchants %}
-        <h2>Student info:  {{ m.id }} </h2>
+        <h2>Merchant info:  {{ m.id }} </h2>
         {{ m.Merchant_Name }} <br>
         {{ m.Food_Name}} <br>
         {{ m.Business_Name}} <br>
