--- a/templates/BillManagement/BillList.html
+++ b/templates/BillManagement/BillList.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    {% for b in Bills %}
+    {% for b in Bill %}
         <h2>Bill info:  {{ b.id }} </h2>
         {{ b.Payment_Type }} <br>
         {{ b.Total_Price}} <br>
