--- a/templates/OrderManagement/OrderList.html
+++ b/templates/OrderManagement/OrderList.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    {% for o in Order %}
+    {% for o in Orders %}
         <h2>Order info:  {{ o.id }} </h2>
         {{ o.Order_Type }} <br>
         {{ o.Order_Status}} <br>
