--- a/templates/CustomerManagement/CustomerList.html
+++ b/templates/CustomerManagement/CustomerList.html
@@ -4,7 +4,7 @@
 
 
 
-    {% for c in customer %}
+    {% for c in Customer %}
 
         <h2>Customer info:  {{ c.id }} </h2>
         {{ c.customer_name }} <br>
