--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,6 +8,22 @@
 </head>
 <body>
 This is the base template
+
+<br>
+
+
+<a href="{% url 'Merchant' %}">Merchant List</a><br>
+<a href="{% url 'insertMerchant' %}">Insert Merchant</a><br>
+
+
+{% if user.is_authenticated %}
+    <h3>{{ user.username }}</h3>
+    <a href="{% url 'logout' %}">Logout</a><br>
+{% else %}
+    <h3> Stranger!</h3>
+    <a href="{% url 'registration' %}">Sign Up</a><br>
+    <a href="{% url 'login' %}">Login</a><br>
+{% endif %}
 
 {% block content %}
 
