--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,8 @@ This is the base template
 
 <a href="{% url 'Merchant' %}">Merchant List</a><br>
 <a href="{% url 'insertMerchant' %}">Insert Merchant</a><br>
-
+<a href="{% url 'Customer' %}">Customer List</a><br>
+<a href="{% url 'insertCustomer' %}">Insert Customer</a><br>
 
 {% if user.is_authenticated %}
     <h3>{{ user.username }}</h3>
