--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@ This is the base template
 <a href="{% url 'insertCustomer' %}">Insert Customer</a><br>
 <a href="{% url 'Food' %}">Food List</a><br>
 <a href="{% url 'insertFood' %}">Insert Food</a><br>
+<a href="{% url 'Order' %}">Order List</a><br>
+<a href="{% url 'insertOrder' %}">Insert Order</a><br>
 
 
 {% if user.is_authenticated %}
