--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,8 @@ This is the base template
 <a href="{% url 'insertFood' %}">Insert Food</a><br>
 <a href="{% url 'Order' %}">Order List</a><br>
 <a href="{% url 'insertOrder' %}">Insert Order</a><br>
+<a href="{% url 'Bill' %}">Bill List</a><br>
+<a href="{% url 'insertBill' %}">Insert Bill</a><br>
 
 
 {% if user.is_authenticated %}
