--- a/templates/customer_base.html
+++ b/templates/customer_base.html
@@ -42,13 +42,19 @@
                 <button type="submit" name="search" value="Dinner">Dinner</button>
             </form>
 
-
+          <a class="dropdown-item" href="#">Breakfast</a>
+          <a class="dropdown-item" href="#">lunch</a>
+            <a class="dropdown-item" href="#">Dinner</a>
         </div>
+
      <li class="nav-item">
         <a class="nav-link" href="{% url 'Food' %}">Foods</a>
       </li>
-        <li class="nav-item">
-        <a class="nav-link" href="{% url 'insertOrder' %}">Insert Order</a>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'order-food'  %}">Make Order</a>
+      </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'my_order' %}">My Order</a>
       </li>
         <li class="nav-item">
         <a class="nav-link" href="{% url 'C_View_Profile' %}">Profile</a>
@@ -87,9 +93,9 @@
 
 
 
+   </ul>
+</div>
 
-
-  </div>
 </nav>
 
 
