--- a/templates/merchant_base.html
+++ b/templates/merchant_base.html
@@ -20,37 +20,93 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<br>
-welcome to my WEBSITE!
-
-<br>
 
 
-<a href="{% url 'Merchant' %}">Merchant List</a><br>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">HomeCookUps</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<a href="{% url 'View_Profile' %}">Profile</a><br>
-
-<a href="{% url 'Complete_Profile' %}">Complete Profile</a><br>
-
-<a href="{% url 'Customer' %}">Customer List</a><br>
-
-<a href="{% url 'Food' %}">Food List</a><br>
-
-<a href="{% url 'insertFood' %}">insert Food</a><br>
-
-<a href="{% url 'Order' %}">Order List</a><br>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
 
 
 
 
-{% if user.is_authenticated %}
-    <h3>{{ user.username }}</h3>
-    <a href="{% url 'logout' %}">Logout</a><br>
+     <li class="nav-item">
+        <a class="nav-link" href="{% url 'insertFood' %}">Insert Food</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'Food' %}">Food List</a>
+      </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'Order' %}">Order List</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'Customer' %}">Customer List</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'Merchant' %}">Merchant List</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'View_Profile' %}">Profile</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'Complete_Profile' %}">Complete Profile</a>
+      </li>
+        {% if user.is_authenticated %}
+                 <li class="nav-item">
+        <a class="nav-link" href="#"><h7> {{ user.username }}</h7></a>
+      </li>
+             <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+      </li>
+
 {% else %}
-    <h3> Stranger!</h3>
+           <li class="nav-item">
+        <a class="nav-link" href="#"><h7> Stranger!</h7></a>
+      </li>
+
+             <li class="nav-item">
     <a href="{% url 'merchant_registration' %}">Sign Up</a><br>
+            </li>
+            <li class="nav-item">
     <a href="{% url 'login' %}">Login</a><br>
+             </li>
 {% endif %}
+
+            <form method="POST" action="/Food/">
+                {% csrf_token %}
+
+              <input  type="search" name="search">
+
+              <button  type="submit">Search</button>
+            </form>
+
+
+
+   </ul>
+</div>
+
+</nav>
+
+
+
+
+
+
+
+
+{##}
+{#{% if user.is_authenticated %}#}
+{#    <h3>{{ user.username }}</h3>#}
+{#    <a href="{% url 'logout' %}">Logout</a><br>#}
+{#{% else %}#}
+{#    <h3> Stranger!</h3>#}
+{#    <a href="{% url 'merchant_registration' %}">Sign Up</a><br>#}
+{#    <a href="{% url 'login' %}">Login</a><br>#}
+{#{% endif %}#}
 
 {% block content %}
 
