--- a/templates/customer_base.html
+++ b/templates/customer_base.html
@@ -54,6 +54,10 @@
     <li class="nav-item">
         <a class="nav-link" href="{% url 'my_order' %}">My Order</a>
       </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'cart' %}">Cart</a>
+      </li>
+{#    <a class="nav-link"  href="{% url 'cart' %}">Cart</a>#}
         <li class="nav-item">
         <a class="nav-link" href="{% url 'C_View_Profile' %}">Profile</a>
       </li>
