--- a/templates/merchant_base.html
+++ b/templates/merchant_base.html
@@ -89,15 +89,14 @@
 </nav>
 
 
-
-
 {% block content %}
 
 {% endblock content %}
 
+
 <br>
-<br>
-<br>
+
+    <a href="javascript:history.back()">Go Back</a>
 <br>
 
 
@@ -155,9 +154,6 @@
         </div>
       </div>
     </footer>
-
-
-
 
 
 </body>
