--- a/templates/MerchantManagement/MerchantList.html
+++ b/templates/MerchantManagement/MerchantList.html
@@ -3,32 +3,83 @@
 {% load static %}
 
 {% block content %}
+     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
 
-    <div class="row row-cols-1 row-cols-md-3">
-
-    {% for m in Merchant %}
-        <div class="col mb-4">
-          <div class="card h-100" >
-              <img src="{{ m.Profile_pic.url }}" class="card-img-top" width="200" height="400" alt="image"> <br>
-              <div class="card-body">
-                  <p class="card-text">
-                      <h2>  {{ m.Merchant_Name }} </h2>
-                      <h6> Food Name: {{ m.M_Food_Name}} </h6>
-                      <h6> Business Name : {{ m.Business_Name}} </h6>
-                       <h6> Email: {{ m.Email }} </h6>
-                      <h6> NID : {{ m.NID}} </h6>
-                       <h6> Phone number: {{ m.Phone_Number}} </h6>
-                      <h6> Address : {{ m.Address}} </h6>
-
-              </p>
-
-            </div>
-          </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://www.thespruceeats.com/thmb/ZunmTodJtTh5qOfWJfxiksmO0MI=/1885x1414/smart/filters:no_upscale()/GettyImages-639704020-5c4a63ecc9e77c00017bfebf.jpg" class="d-block w-100" alt="..."height="600">
+{#          <div class="carousel-caption d-none d-md-block">#}
+{#            <h5>First slide label</h5>#}
+{#            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>#}
+{#          </div>#}
         </div>
 
+        <div class="carousel-item">
+          <img src="https://2.bp.blogspot.com/-FZ8vqtW5yF0/VBLbhg5rDeI/AAAAAAAAAHs/HPUfOM_C43Q/s1600/Chingri-Malakari.jpg" class="d-block w-100" alt="..." height="600">
+{#          <div class="carousel-caption d-none d-md-block">#}
+{#            <h5>Second slide label</h5>#}
+{#            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>#}
+{#          </div>#}
+        </div>
+
+        <div class="carousel-item">
+          <img src="https://static.toiimg.com/thumb/53007558.cms?width=1200&height=900" class="d-block w-100" alt="..." height="600">
+{#          <div class="carousel-caption d-none d-md-block">#}
+{#            <h5>Third slide label</h5>#}
+{#            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>#}
+{#          </div>#}
+{#        </div>#}
+
+      </div>
+
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+
+    </div>
+
+    <br><br>
+{##}
+{#    <div class="row row-cols-1 row-cols-md-3">#}
 
 
-    {% endfor %}
+{##}
+{#    <div class="row row-cols-1 row-cols-md-3">#}
+{##}
+{#    {% for m in Merchant %}#}
+{#        <div class="col mb-4">#}
+{#          <div class="card h-100" >#}
+{#              <img src="{{ m.Profile_pic.url }}" class="card-img-top" width="200" height="400" alt="image"> <br>#}
+{#              <div class="card-body">#}
+{#                  <p class="card-text">#}
+{#                      <h2>  {{ m.Merchant_Name }} </h2>#}
+{#                      <h6> Food Name: {{ m.M_Food_Name}} </h6>#}
+{#                      <h6> Business Name : {{ m.Business_Name}} </h6>#}
+{#                       <h6> Email: {{ m.Email }} </h6>#}
+{#                      <h6> NID : {{ m.NID}} </h6>#}
+{#                       <h6> Phone number: {{ m.Phone_Number}} </h6>#}
+{#                      <h6> Address : {{ m.Address}} </h6>#}
+{##}
+{#              </p>#}
+{##}
+{#            </div>#}
+{#          </div>#}
+{#        </div>#}
+{##}
+{##}
+{##}
+{#    {% endfor %}#}
     </div>
 
 
