--- a/templates/customer_base.html
+++ b/templates/customer_base.html
@@ -106,11 +106,12 @@
 {% block content %}
 
 {% endblock content %}
+    <br>
+
+    <a href="javascript:history.back()">Go Back</a>
+
 <br>
-<br>
-<br>
-<br>
-<br>
+
 
 
  <footer class="ftco-footer ftco-section" style="background-color: #87CEEB">
