--- a/templates/FoodManagement/detail_product_view_review.html
+++ b/templates/FoodManagement/detail_product_view_review.html
@@ -41,7 +41,9 @@
         <form method="POST">
             {% csrf_token %}
             {{ form | crispy }}
-            <button type="submit" class="btn btn-outline-success">Submit</button>
+
+            <button type="submit">Review</button>
+
         </form>
         {% else %}
             <h2>You have already submitted a review</h2>
