--- a/templates/customer_base.html
+++ b/templates/customer_base.html
@@ -55,7 +55,7 @@
       </li>
 
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'my_order' %}">My Order</a>
+        <a class="nav-link" href="{% url 'my-order' %}">My Order</a>
       </li>
     <li class="nav-item">
         <a class="nav-link" href="{% url 'cart' %}">Cart</a>
@@ -119,7 +119,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">About</h2>
+              <h2 class="ftco-heading-2"><a href="{% url 'abouts' %}">About</a></h2>
               <p> <h6> Are you looking for best food in town?</h6> Then your search ends here.
                 Get delicious fresh homemade food from our website.
 
