--- a/templates/merchant_base.html
+++ b/templates/merchant_base.html
@@ -106,7 +106,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">About</h2>
+              <h2 class="ftco-heading-2"><a href="{% url 'abouts' %}">About</a></h2>
               <p> <h6> Are you looking for best food in town?</h6> Then your search ends here.
                 Get delicious fresh homemade food from our website.
 
