--- a/templates/MerchantManagement/MerchantList.html
+++ b/templates/MerchantManagement/MerchantList.html
@@ -12,7 +12,7 @@
 
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://www.thespruceeats.com/thmb/ZunmTodJtTh5qOfWJfxiksmO0MI=/1885x1414/smart/filters:no_upscale()/GettyImages-639704020-5c4a63ecc9e77c00017bfebf.jpg" class="d-block w-100" alt="..."height="600">
+          <img src="https://previews.123rf.com/images/tbralnina/tbralnina1904/tbralnina190400284/120959659-traditional-moroccan-tajine-of-chicken-with-salted-lemons-olives-top-view-.jpg" class="d-block w-100" alt="..."height="600">
 {#          <div class="carousel-caption d-none d-md-block">#}
 {#            <h5>First slide label</h5>#}
 {#            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>#}
@@ -20,7 +20,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="https://2.bp.blogspot.com/-FZ8vqtW5yF0/VBLbhg5rDeI/AAAAAAAAAHs/HPUfOM_C43Q/s1600/Chingri-Malakari.jpg" class="d-block w-100" alt="..." height="600">
+          <img src="https://wallpaperaccess.com/full/3086413.jpg" class="d-block w-100" alt="..." height="600">
 {#          <div class="carousel-caption d-none d-md-block">#}
 {#            <h5>Second slide label</h5>#}
 {#            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>#}
@@ -28,7 +28,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="https://static.toiimg.com/thumb/53007558.cms?width=1200&height=900" class="d-block w-100" alt="..." height="600">
+          <img src="https://wallpaperaccess.com/full/3086406.jpg" class="d-block w-100" alt="..." height="600">
 {#          <div class="carousel-caption d-none d-md-block">#}
 {#            <h5>Third slide label</h5>#}
 {#            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>#}
