--- a/templates/main_home.html
+++ b/templates/main_home.html
@@ -28,7 +28,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
              <title>Home Cookups</title>
-          <img src="https://previews.123rf.com/images/tbralnina/tbralnina1904/tbralnina190400284/120959659-traditional-moroccan-tajine-of-chicken-with-salted-lemons-olives-top-view-.jpg" class="d-block w-100" alt="..." height="600">
+          <img src="https://wallpaperaccess.com/full/3086514.jpg" class="d-block w-100" alt="..." height="600">
           <div class="carousel-caption d-none d-md-block">
             <h5>I am a...</h5>
             <p><a href="{% url 'Customer' %}">Customer</a></p>
