--- a/templates/CustomerManagement/CustomerList.html
+++ b/templates/CustomerManagement/CustomerList.html
@@ -11,7 +11,7 @@
 
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://www.thespruceeats.com/thmb/ZunmTodJtTh5qOfWJfxiksmO0MI=/1885x1414/smart/filters:no_upscale()/GettyImages-639704020-5c4a63ecc9e77c00017bfebf.jpg" class="d-block w-100" alt="..."height="600">
+          <img src="https://coverfiles.alphacoders.com/101/101341.jpg" class="d-block w-100" alt="..."height="600">
 {#          <div class="carousel-caption d-none d-md-block">#}
 {#            <h5>First slide label</h5>#}
 {#            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>#}
@@ -19,7 +19,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="https://2.bp.blogspot.com/-FZ8vqtW5yF0/VBLbhg5rDeI/AAAAAAAAAHs/HPUfOM_C43Q/s1600/Chingri-Malakari.jpg" class="d-block w-100" alt="..." height="600">
+          <img src="https://wallpapers.net/free-download-assorted-food-hd-wallpaper-for-desktop-mobiles/download/2560x1440.jpg" class="d-block w-100" alt="..." height="600">
 {#          <div class="carousel-caption d-none d-md-block">#}
 {#            <h5>Second slide label</h5>#}
 {#            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>#}
@@ -27,7 +27,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="https://static.toiimg.com/thumb/53007558.cms?width=1200&height=900" class="d-block w-100" alt="..." height="600">
+          <img src="https://coverfiles.alphacoders.com/911/91101.jpg" class="d-block w-100" alt="..." height="600">
 {#          <div class="carousel-caption d-none d-md-block">#}
 {#            <h5>Third slide label</h5>#}
 {#            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>#}
