--- a/templates/FoodManagement/cart.html
+++ b/templates/FoodManagement/cart.html
@@ -24,19 +24,18 @@
                             <h4>Food ID : {{ search.Food_id }}</h4>
                             <h5> Price : {{ search.Food_Price }}</h5>
                             <h5> Category : {{ search.Food_Category }}</h5>
-                            <h5> Description : {{ search.Food_Desc }}</h5>
-                            <h5> Food status : {{ search.status }} </h5>
+
                         </p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 
               <h4>Option 1: <a href="{% url 'order-food' search.id %}" >Payment on delivery</a> <br></h4>
 
 
-        <h4>Option 2:</h4>
+        <h4>Option 2:<a href="{% url 'order-food' search.id %}" >Order on Bkash</a> <br></h4>
               <form action="{% url 'bkash-order-food' search.id %}" method="POST">
                   {% csrf_token %}
                   <input name="transaction_id" type="text" placeholder="Bkash transaction ID" required>
-                  <button type="submit">Order with Bkash</button>
+                  <button type="submit" class="btn btn-primary">Order with Bkash</button>
               </form>
 
 
