--- a/templates/merchant_base.html
+++ b/templates/merchant_base.html
@@ -66,10 +66,10 @@
       </li>
 
              <li class="nav-item">
-    <a href="{% url 'merchant_registration' %}">Sign Up</a><br>
+   <a class="nav-link" href="{% url 'merchant_registration' %}">Sign Up</a><br>
             </li>
             <li class="nav-item">
-    <a href="{% url 'login' %}">Login</a><br>
+   <a class="nav-link" href="{% url 'login' %}">Login</a><br>
              </li>
 {% endif %}
 
