--- a/templates/CustomerManagement/about.html
+++ b/templates/CustomerManagement/about.html
@@ -129,9 +129,7 @@
                   <strong>About me</strong>
                 </h4>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quae, dolores dicta.
-                  Blanditiis rem amet repellat, dolores nihil quae in mollitia asperiores ut rerum repellendus,
-                  voluptatum eum, officia laudantium quaerat?
+                <p>Experience in Java , python, django , c, HTML & CSS . Also expert in database ,  analysis & design and web development. Worked in different projects using java and python .
                 </p>
                 <hr>
                 <!-- Social Icons -->
@@ -205,9 +203,7 @@
                   <strong>About me</strong>
                 </h4>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quae, dolores dicta.
-                  Blanditiis rem amet repellat, dolores nihil quae in mollitia asperiores ut rerum repellendus,
-                  voluptatum eum, officia laudantium quaerat?
+                <p>Experience in Java , python, django , c, HTML & CSS . Also expert in database ,  analysis & design and web development. Worked in different projects using java and python .
                 </p>
                 <hr>
                 <!-- Social Icons -->
@@ -281,9 +277,7 @@
                   <strong>About me</strong>
                 </h4>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quae, dolores dicta.
-                  Blanditiis rem amet repellat, dolores nihil quae in mollitia asperiores ut rerum repellendus,
-                  voluptatum eum, officia laudantium quaerat?
+                <p>Experience in Java , python, django , c, HTML & CSS . Also expert in database ,  analysis & design and web development. Worked in different projects using java and python .
                 </p>
                 <hr>
                 <!-- Social Icons -->
