--- a/templates/main_home.html
+++ b/templates/main_home.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home Cookups</title>
 </head>
 <body>
 <!-- Optional JavaScript -->
@@ -16,7 +16,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<br>
 
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -30,20 +29,26 @@
              <title>Home Cookups</title>
           <img src="https://wallpaperaccess.com/full/3086514.jpg" class="d-block w-100" alt="..." height="600">
           <div class="carousel-caption d-none d-md-block">
-            <h5>I am a...</h5>
-            <p><a href="{% url 'Customer' %}">Customer</a></p>
-              <p><a href="{% url 'Merchant' %}">Merchant</a></p>
+            <h2 style="color: black">I am a...</h2>
+               <button type="button" class="btn btn-warning btn-lg"><a href="{% url 'Merchant' %}">Merchant</a></button>
+              <button type="button" class="btn btn-warning btn-lg"><a href="{% url 'Customer' %}">Customer</a></button>
+{#      <button type="button" class="btn btn-warning btn-lg"><a href="{% url 'Merchant' %}">Merchant</a></button>#}
+
+{#            <p><a href="{% url 'Customer' %}">Customer</a></p>#}
+{#              <p><a href="{% url 'Merchant' %}">Merchant</a></p>#}
 
           </div>
         </div>
 
         <div class="carousel-item">
              <title>Home Cookups</title>
-          <img src="https://previews.123rf.com/images/tbralnina/tbralnina1510/tbralnina151000053/47367800-traditional-moroccan-chicken-with-dried-fruits-and-spices-selective-focus-.jpg" class="d-block w-100" alt="..." height="600">
+          <img src="https://wallpaperaccess.com/full/3086413.jpg" class="d-block w-100" alt="..." height="600">
           <div class="carousel-caption d-none d-md-block">
-            <h5>I am a...</h5>
-            <p><a href="{% url 'Customer' %}">Customer</a></p>
-              <p><a href="{% url 'Merchant' %}">Merchant</a></p>
+            <h2 style="color: black">I am a...</h2>
+                 <button type="button" class="btn btn-warning btn-lg"><a href="{% url 'Merchant' %}">Merchant</a></button>
+              <button type="button" class="btn btn-warning btn-lg"><a href="{% url 'Customer' %}">Customer</a></button>
+{#      <button type="button" class="btn btn-warning btn-lg"><a href="{% url 'Merchant' %}">Merchant</a></button>#}
+
           </div>
         </div>
 
@@ -51,9 +56,11 @@
            <title>Home Cookups</title>
           <img src="https://grabmerchanthelp.zendesk.com/hc/article_attachments/360042926091/mex.png" class="d-block w-100" alt="..." height="600">
           <div class="carousel-caption d-none d-md-block">
-            <h5>I am a...</h5>
-            <p><a href="{% url 'Customer' %}">Customer</a></p>
-              <p><a href="{% url 'Merchant' %}">Merchant</a></p>
+             <h2 style="color: black">I am a...</h2>
+                 <button type="button" class="btn btn-warning btn-lg"><a href="{% url 'Merchant' %}">Merchant</a></button>
+              <button type="button" class="btn btn-warning btn-lg"><a href="{% url 'Customer' %}">Customer</a></button>
+{#      <button type="button" class="btn btn-warning btn-lg"><a href="{% url 'Merchant' %}">Merchant</a></button>#}
+
           </div>
         </div>
 
